# GameServer

./: .gitignore  CMakeLists.txt  INSTALL.md  README.txt  _cmake.bat  _cmake.sh  depends-build.txt  install.cmake  problems.docx  test_curl.cpp
DBPlugin/: CMakeLists.txt  DBConnection.cpp  DBConnection.h  DBConnectionPool.cpp  DBConnectionPool.h  DBExport.h  DBHandler.cpp  DBHandler.h  DBMgr.cpp  DBMgr.h  DBPlugin.cpp  DBPlugin.h  DBTable.h  PyCustomObj.cpp  PyDb.h  PyDbInst.cpp  PyDbInst.h  PyDbInterface.cpp  PyDbInterface.h  PyRedis.cpp  PyRedis.h  Redis.cpp  Redis.h
DBPlugin/include/: Reflect.h
DBPlugin/mongo/: MongoDBHandler.cpp  MongoDBHandler.h
GameServer/: CMakeLists.txt  CmdLine.cpp  GameActor.h  GamePlayer.cpp  GamePlayer.h  GameService.cpp  GameService.h  MessageMgr.cpp  MessageMgr.h  Network.cpp  Network.h  ProtoBufferMgr.cpp  ProtoBufferMgr.h  PyDbInterface.h  PyLogger.cpp  PyLogger.h  PythonPlugin.cpp  PythonPlugin.h  ServerMain.cpp  TcpConnection.cpp  TcpConnection.h  Timer.cpp  Timer.h  UnitTest.cpp  UnitTest.h  ZmqInst.cpp  ZmqInst.h  protoproto.h
GameServer/proto/: login.pb.cc  login.pb.h  proto.h  test.pb.cc  test.pb.h
GameServer/py_module/: PyGame.cpp  PyLogger.cpp  PyModule.h  PyService.cpp  PyService.h  PyTimer.cpp
GameUtil/: CMakeLists.txt  Config.cpp  Config.h  Const.h  GameUtil.h  LazySingleton.h  MyBuffer.cpp  MyBuffer.h  Platform.h  PyTimer.cpp  PyTimer.h  Singleton.h  TimeUtil.cpp  TimeUtil.h  Timer.cpp  Timer.h  ZmqInst.cpp  ZmqInst.h  ZmqRouter.cpp
GameUtil/Profile/: ProfileTrack.cpp  ProfileTrack.h
Gateway/: CMakeLists.txt  Main.cpp  MessageHandler.cpp  MessageHandler.h  Network.cpp  Network.h  ProtoBufferMgr.cpp  ProtoBufferMgr.h  TcpConnection.cpp  TcpConnection.h
HttpServer/: CMakeLists.txt  HttpServerExport.h  PyHttpServer.cpp  PyHttpServer.hpp  PyHttpUtil.h  async_client.cpp  connection.cpp  connection_manager.cpp  main.cpp  reply.cpp  reply.hpp  request_handler.cpp  server.hpp
HttpServer/http_client/: HttpClientMgr.cpp
Math/: CMakeLists.txt  MathFunction.cpp  MathFunction.h
SceneServer/: AOIMgr.cpp  AOIMgr.h  CMakeLists.txt  DetourMgr.cpp  DetourMgr.h  GameActor.cpp  GameActor.h  GameNpc.cpp  GameNpc.h  GamePlayer.cpp  GamePlayer.h  GameScene.cpp  GameScene.h  PyGamePlayer.cpp  PyGamePlayer.h  PyScene.cpp  PyScene.h  PySceneObj.cpp  PySceneObj.h  SceneExport.h  SceneMgr.cpp  SceneMgr.h  Vector.cpp  Vector.h
TestRedis/: CMakeLists.txt  TestRedis.cpp
ZmqRouter/: CMakeLists.txt  Router.cpp
engine/DBPlugin/: CMakeLists.txt  DBHandler.cpp  DBHandler.h  DBMgr.cpp  DBMgr.h  DBPlugin.cpp  DBPlugin.h  DBTable.h  DataBase.h  PyCustomObj.h  PyDb.cpp  Redis.cpp  Redis.h
engine/DBPlugin/include/: Reflect.h
engine/GameLib/: AsioService.cpp  AsioService.h  CMakeLists.txt  CommEntity.cpp  CommEntity.h  Config.cpp  Config.h  GameService.cpp  GameService.h  IMessageHandler.h  IScript.cpp  IScript.h  IScriptRegister.h  MsgBuilder.cpp  MsgBuilder.h  MyBuffer.cpp  MyBuffer.h  PyTimer.cpp  PyTypeBase.cpp  ServiceCommEntityMgr.cpp  ServiceCommEntityMgr.h  ServiceInfo.cpp  ServiceInfo.h  ServiceType.cpp  ServiceType.h  Singleton.h  StrUtil.cpp  StrUtil.h  TaskMgr.cpp  TaskMgr.h  TcpCommEntity.cpp  TcpCommEntity.h  TimeUtil.cpp  TimeUtil.h  Timer.cpp  Timer.h  ZmqCommEntity.cpp  ZmqCommEntity.h  ZmqInst.cpp  ZmqInst.h  (+1 more)
engine/GameLib/Network/: CommEntity.cpp  (+24 more)
engine/GameServer/: CMakeLists.txt  CmdLine.cpp  CmdLine.h  ExitTraceback.h  GameService.cpp  GameService.h  MessageHandler.cpp  MessageHandler.h  MessageMgr.cpp  MessageMgr.h  PythonPlugin.cpp  ScriptBind.cpp  ScriptBind.h  ServerMain.cpp  UnitTest.cpp  logTest.Property
engine/GameUtil/: CMakeLists.txt  Config.h  MyBuffer.h  PyTimer.cpp  PyTimer.h  Singleton.h  Timer.h  ZmqInst.cpp  ZmqInst.h  ZmqRouter.h
engine/Gateway/: CMakeLists.txt  GatewayConnection.cpp  GatewayConnection.h  GatewayEntry.cpp  GatewayEntry.h  GatewayMessageHandler.cpp  GatewayMessageHandler.h  GatewayNet.cpp  GatewayNet.h  Network.cpp  Network.h  TcpConnection.cpp  TcpConnection.h
engine/Http/: CMakeLists.txt  connection_manager.cpp  connection_manager.hpp  request_handler.cpp  request_handler.hpp
engine/LuaBind/: CMakeLists.txt  LuaConfig.cpp  LuaConfig.h  LuaCrypt.cpp  LuaCrypt.h  LuaDB.cpp  LuaDB.h  LuaHttp.cpp  LuaHttp.h  LuaHttpServer.cpp  LuaHttpServer.h  LuaPlugin.cpp  LuaPlugin.h  LuaRedis.cpp  LuaRedis.h  LuaRegistryObj.cpp  LuaRegistryObj.h  LuaScene.cpp  LuaScene.h  LuaSceneObj.cpp  LuaSceneObj.h  LuaService.cpp  LuaService.h  LuaTimer.cpp  LuaTimer.h
engine/LuaPB/: CMakeLists.txt  vs.txt
engine/Network/: CMakeLists.txt  ClientNet.cpp  ClientNet.h  Connection.cpp  Connection.h  Network.h  ServerNet.cpp  ServerNet.h
engine/ProtoBuffer/: CMakeLists.txt  proto.cpp  proto.h
engine/PythonBind/: CMakeLists.txt  PyCommon.cpp  PyCommon.h  PyConfig.cpp  PyCrypt.cpp  PyDb.cpp  PyDbInst.cpp  PyGame.cpp  PyGameNpc.h  PyGamePlayer.cpp  PyGamePlayer.h  PyHttp.cpp  PyHttp.h  PyHttpServer.cpp  PyHttpUtil.cpp  PyLogger.cpp  PyModule.h  PyRedis.cpp  PyScene.cpp  PySceneObj.cpp  PyService.cpp  PyTimer.cpp  PyTimer.h  PyTypeBase.cpp  PyTypeBase.h  PythonPlugin.cpp  PythonPlugin.h
engine/SceneServer/: AOIMgr.cpp  AOIMgr.h  CMakeLists.txt  DetourMgr.cpp  DetourMgr.h  GameActor.cpp  GameActor.h  GameNpc.cpp  GameNpc.h  GamePlayer.cpp  GamePlayer.h  GameScene.cpp  GameScene.h  NpcEntity.cpp  NpcEntity.h  PlayerEntity.cpp  PlayerEntity.h  PyScene.cpp  SceneEntity.cpp  SceneEntity.h  SceneMgr.cpp  SceneMgr.h  SceneTask.cpp  SceneTask.h  Vector.cpp  Vector.h
engine/ServiceCenter/: CMakeLists.txt  SCConnection.cpp  SCConnection.h  SCMessageHandler.cpp  SCMessageHandler.h  SCNet.cpp  SCNet.h  ServiceCenter.cpp  ServiceCenter.h
engine/Test/: Boost_MultiIndex.cpp  CMakeLists.txt  Test.h  TestBindFunctionPtr.cpp  TestCURL.cpp  TestMain.cpp  TestOperateNew.cpp  TestSOL.cpp  TestSignal.cpp  asio_curl.cpp
engine/TestRedis/: CMakeLists.txt  TestRedis.cpp
engine/TestZmq/: CMakeLists.txt  Device.cpp
log4cpp/: CMakeLists.txt
log4cpp/include/: Logger.h
log4cpp/logger/: Logger.cpp
log4cpp/src/: Category.cpp
(+427 files in other folders)
